<resources>
    <string name="app_name">Vocabl</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="input_word_or_sentence">Input word or sentence</string>
    <string name="in_english">In English:</string>
    <string name="translated_suggestions">Translated Suggestions</string>
    <string name="save_and_create_new_entry">Save and Create New Entry</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="translation_suggestion_error_message">No translation suggestions\n[Translation Suggestions could be off or\nthe language does not support this feature]</string>
    <string name="entry_already_exists">Entry already exists</string>
    <string name="select_dictionary">Select Dictionary</string>
    <string name="your_dictionary_library">Your Dictionary Library</string>
    <string name="create_new_dictionary">Create New Dictionary</string>
    <string name="back_button">Back Button</string>
    <string name="looks_like_you_haven_t_made_a_dictionary_yet_n_create_a_new_one">Looks like you haven\'t made a dictionary yet,\n create a new one</string>
    <string name="give_a_name_to_your_dictionary">Give a name to your dictionary</string>
    <string name="dictionary_name">Dictionary Name</string>
    <string name="dictionary_language">Dictionary Language</string>
    <string name="select_your_dictionary_language">Select your dictionary language</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="enable_translation_suggestions">Enable Translation Suggestions</string>
    <string name="translation_language">Translation Language</string>
    <string name="test_2">Test 2</string>
    <string name="test">Test</string>
    <string name="easy_3d">Easy (3d)</string>
    <string name="normal_2d">Normal (2d)</string>
    <string name="repeat_1d">Repeat (1d)</string>
    <string name="hard_1d">Hard (1d)</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_ve_reviewed">You\'ve reviewed:</string>
    <string name="_20">20</string>
    <string name="words_sentences">words/sentences</string>
    <string name="finish">FINISH</string>
    <string name="deletion_text">Are you sure you want to\n delete this dictionary?</string>
    <string name="yes">Yes</string>
    <string name="select_language">Select Language</string>
    <string name="search">Search</string>
    <string name="_0">0</string>
    <string name="memorized">Memorized</string>
    <string name="learning">Learning</string>
    <string name="new_entry">New Entry</string>
    <string name="you_have_some_words_n_to_review">You have some words\n to review</string>
    <string name="placeholder_statistics">Placeholder Statistics\n graph goes here</string>
    <string name="placeholder_settings_menu">Placeholder Settings Menu\n goes here</string>
    <string name="entry_number">Entry Number</string>
    <string name="spanish">Spanish</string>
    <string name="dictionary">Dictionary</string>
    <string name="english">English</string>
    <string name="pointing_arrow">pointing arrow</string>
    <string name="entry">Entry</string>
    <string name="status">Status:</string>
    <string name="synonyms">synonyms</string>
    <string name="verb">VERB</string>
    <string name="text">Text    -></string>
    <string name="update">Update</string>
    <string name="other_data">Other Data</string>
    <string name="status_learning">Status: Learning</string>
    <string name="entry_description">Entry Description</string>
    <string name="hola">Hola</string>
    <string name="entry_name">Entry Name</string>
</resources>