<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".entry.UpdateEntry">

    <TextView
        android:id="@+id/textViewEntryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entry_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_light"
        android:layout_marginTop="20sp"
        app:cardCornerRadius="20dp"
        android:layout_below="@id/textViewEntryName">


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/hola"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewEntryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewName"
        android:layout_marginTop="40dp"
        android:text="@string/entry_description"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textViewEntryDescription"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescription"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayout1"
        android:layout_marginTop="40dp"
        android:text="@string/other_data"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textViewOtherData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewOther"
        android:layout_above="@id/buttonUpdateBack"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/status_learning"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/buttonUpdateBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_light"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/back"
        />

    <Button
        android:id="@+id/buttonUpdateEntry"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_light"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/update"
        />

</RelativeLayout>