<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#FFFFFF"
    android:padding="16dp"
    tools:context=".entry.AddEntry">

    <TextView
        android:id="@+id/textViewIntputWordText"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/input_word_or_sentence"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textViewIntputWordText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputSentence"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewEntryExistsWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_already_exists"
        android:layout_below="@+id/textInputLayout"
        android:textColor="@color/warning_color_light"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/textViewTranslationTo"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textInputLayout"
        android:text="@string/in_english"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTranslationTo"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTranslatedResult"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewTranslationSuggestions"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textInputLayout2"
        android:text="@string/translated_suggestions"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/listViewTranslations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewTranslationSuggestions"
        android:layout_above="@id/buttonSaveAndNew"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewTranslationSuggestionsErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textViewTranslationSuggestions"
        android:textSize="20sp"
        android:visibility="invisible"
        android:text="@string/translation_suggestion_error_message"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonSaveAndNew"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/buttonCancelNewEntry"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:text="@string/save_and_create_new_entry"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCancelNewEntry"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonAddNewEntry"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="invisible"/>

</RelativeLayout>