<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_light"
    tools:context=".library.NewDictionary">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/give_a_name_to_your_dictionary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_below="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDictionaryName"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/dictionary_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_below="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/select_your_dictionary_language"
        android:textSize="24sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_below="@id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/textViewLanguageSelector1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/dictionary_language"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSwitchLanguage"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardView"
        app:icon="@drawable/baseline_swap_vert_24"
        app:iconSize="30dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSwitchLanguage"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/textViewLanguageSelector2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/translation_language"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchTranslationSuggestion"
        android:layout_marginTop="50dp"
        android:layout_below="@id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/enable_translation_suggestions"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/buttonCreateDictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="50dp"
        android:text="@string/create"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/buttonBack"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:backgroundTint="@color/secondary_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="48dp"
        android:textColor="@color/white"
        android:text="@string/back"
        android:textSize="24sp"/>


</RelativeLayout>