<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".review.ReviewEnd">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewReviewEnd"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:backgroundTint="@color/primary_light"
        android:layout_alignParentTop="true"
        android:translationZ="10dp"
        android:layout_marginTop="0dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/congratulations"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/you_ve_reviewed"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/_20"
                android:layout_marginTop="130dp"
                android:layout_centerHorizontal="true"
                android:textSize="60sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/words_sentences"
                android:layout_marginTop="200dp"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/listViewReviewEnd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonFinish"
        android:layout_below="@+id/cardViewReviewEnd"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/accent_light"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/finish" />

</RelativeLayout>