<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_light"
    tools:context=".entry.LibraryAddSelector">

    <ImageView
        android:id="@+id/addSelectorBackButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:foreground="@drawable/baseline_arrow_back_24" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/your_dictionary_library"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textViewNewDictionaryHelpText"
        android:visibility="invisible"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/imageViewPointerArrow"
        android:translationZ="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/looks_like_you_haven_t_made_a_dictionary_yet_n_create_a_new_one"/>

    <ImageView
        android:id="@+id/imageViewPointerArrow"
        android:visibility="invisible"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:translationZ="20dp"
        android:layout_above="@id/buttonCreateNewDictionary"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:foreground="@drawable/baseline_arrow_back_24"
        android:rotation="-90" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/textView3"
        app:cardCornerRadius="20dp"
        android:layout_above="@id/buttonCreateNewDictionary">

        <ListView
            android:id="@+id/list_dictionary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.ListView.DropDown"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonCreateNewDictionary"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/create_new_dictionary"
        android:textSize="24sp"/>
    



</RelativeLayout>