<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTranslatedText"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPosTag"
            android:backgroundTint="@color/primary_light"
            android:layout_toEndOf="@id/textViewTranslatedText"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="8dp"
            app:cardCornerRadius="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPosTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:text="@string/verb"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewTranslationSynonyms"
            android:layout_toEndOf="@id/cardViewPosTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/synonyms"
            android:textSize="18sp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>